--- a/specs/scope/index.html
+++ b/specs/scope/index.html
@@ -55,6 +55,13 @@
             <iframe id='loaded-iframe' style='display:none'
                 src='../fixtures/scope/iframeXa.html'></iframe>
             <iframe id='empty-iframe' style='display:none'></iframe>
+            <iframe id='scope-iframe' style='display:none'
+                src='../fixtures/scope/iframeXa.html'></iframe>
+            <iframe id='attribute-iframe' style='display:none'
+                src='../fixtures/scope/attribute.html'></iframe>
+
+            <br />
+            Nested <code>&lt;iframe&gt;</code>s used for "Iframe nesting" test:
             <iframe id='nesting-iframe'
 style='border: 3px solid green; width: 100%; height: 1020px;'>
              </iframe>
