--- a/specs/fixtures/scope/with_js.html
+++ b/specs/fixtures/scope/with_js.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<!--
+ * This file is a component of env.js,
+ *     http://github.com/thatcher/env-js/
+ * a Pure JavaScript Browser Environment
+ * Copyright 2010 John Resig, licensed under the MIT License
+ *     http://www.opensource.org/licenses/mit-license.php
+  -->
+
 <html>
   <head>
     <script type="text/javascript">
+      if (opener.top.functionToCallFromSubwindowOnload != null)
+        window.onload = opener.top.functionToCallFromSubwindowOnload;
+
       var x = true;
       if(1 == 1 && 2 == 3)
         x = false;
