Cleanup of handler left over from pre-import version.

--- a/specs/fixtures/scope/iframeN.html
+++ b/specs/fixtures/scope/iframeN.html
@@ -14,7 +14,7 @@
   <head>
     <title>Document for testing arbitrary-depth IFRAME nesting in env.js</title>
   </head>
-  <body onload="bodyOnloadHandler();">
+  <body>
     <script>
       window.top.numberNestedIframeLoads++;
       window.onload = function(){
