--- a/specs/fixtures/scope/trivial.html
+++ b/specs/fixtures/scope/trivial.html
@@ -12,7 +12,7 @@
       lang="en" dir="ltr" id="html">
   <head>
     <title>Nearly-Empty HTML Page</title>
-    <script>
+    <script type="text/javascript">
       if (opener.top.functionToCallFromSubwindowOnload != null)
         window.onload = opener.top.functionToCallFromSubwindowOnload;
     </script>
