--- a/specs/fixtures/scope/iframe2.html
+++ b/specs/fixtures/scope/iframe2.html
@@ -26,7 +26,7 @@
       -->
 
     <!-- matches code in iframeN.html -->
-    <script>
+    <script type="text/javascript">
       window.onload = function(){
         var p = document.createElement('p');
         p.setAttribute('id', "pCreatedIframeOnload" +
