add patches from jorge ventura to complete form and link following behavior for windows and forms. will be tagged 1.2.17

--- a/specs/window/index.html
+++ b/specs/window/index.html
@@ -46,6 +46,6 @@
                 a side effect.
             -->
         </div>
-        
+        <iframe id='window_exchange_tests' src='forms.html'></iframe>
     </body>
 </html>
