xhr tests were silently not running due to mock error, added test to ensure envjs.uri computes absolute urls from document.baseURI or failing that the winow.location

--- a/specs/window/index.html
+++ b/specs/window/index.html
@@ -45,7 +45,10 @@
                 artifacts the test may require or have generated as 
                 a side effect.
             -->
-        </div>
+        </div>	
+	            <script>
+	                document.writeln('<div id="writeln"></div>');
+	            </script>
         <iframe id='window_exchange_tests' src='forms.html'></iframe>
     </body>
 </html>
