added focus and blur to window, (thanks to ventura for noting this while loading dojo).  added named input elements to named forms so document.myform.myinput will work.  still need to extend functionality to other form elements.  discovered issue with timer implementation which implies we need to integrate timer with console.

--- a/specs/window/forms.html
+++ b/specs/window/forms.html
@@ -11,7 +11,7 @@
 </head>
 <body id="form_tests">
     <form id='form_test_1' method='get' action='links.html'>
-        <input name='foo' type='text' value='abc'/>
+        <input name='blah' type='text' value='abc'/>
     </form>
 </body>
 </html>
