form submissions (for GET) now properly append serialized query string to url derived from action (including clicked sumbit button)

--- a/specs/window/index.html
+++ b/specs/window/index.html
@@ -50,5 +50,6 @@
             document.writeln('<div id="writeln"></div>');
         </script>
         <iframe id='window_exchange_tests' src='forms.html'></iframe>
+        <iframe id='submit_button_tests' src='submit_button.html'></iframe>
     </body>
 </html>
