added some simple svg support so you can load raphaeljs in envjs and write out the resulting svg document. itegrated suggested patch from richard frankel. awesome fun stuff

--- a/specs/window/index.html
+++ b/specs/window/index.html
@@ -1,6 +1,6 @@
 <?xml encoding='utf-8'?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="eng" dir="ltr">
+<!DOCTYPE html>
+<html lang="eng" dir="ltr">
     <head profile="http://a9.com/-/spec/opensearch/1.1/">
         <title>Envjs Window Spec</title>
         
@@ -51,5 +51,8 @@
         </script>
         <iframe id='window_exchange_tests' src='forms.html'></iframe>
         <iframe id='submit_button_tests' src='submit_button.html'></iframe>
+		<div id='framesetHolder'>
+			<frameset id="framesetSerializeTest"><frame src="links.html"/></frameset>
+		</div>
     </body>
 </html>
