--- a/specs/window/index.html
+++ b/specs/window/index.html
@@ -1,5 +1,5 @@
-<?xml encoding='utf-8'?>
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 <html lang="eng" dir="ltr">
     <head profile="http://a9.com/-/spec/opensearch/1.1/">
         <title>Envjs Window Spec</title>
@@ -51,8 +51,6 @@
         </script>
         <iframe id='window_exchange_tests' src='forms.html'></iframe>
         <iframe id='submit_button_tests' src='submit_button.html'></iframe>
-		<div id='framesetHolder'>
-			<frameset id="framesetSerializeTest"><frame src="links.html"/></frameset>
-		</div>
+        <iframe id='frameset_tests' src='frameset.html'></iframe>
     </body>
 </html>
