nested frames new have a correct parent relationship.  added referer header for http requests where window document will be exchanged.  thanks to jorge ventura for finding these issues.  also added example for svg rendering to jpg with batik

--- a/specs/window/frameset.html
+++ b/specs/window/frameset.html
@@ -4,5 +4,5 @@
     <head>
         <title>Envjs Frameset Spec</title>
     </head>
-	<frameset id="framesetSerializeTest"><frame src="links.html"/><noframes>frames not supported</noframes></frameset>
+	<frameset id="framesetSerializeTest"><frame id='fs1' src="links.html"/><noframes>frames not supported</noframes></frameset>
 </html>
