--- a/specs/window/index.html
+++ b/specs/window/index.html
@@ -52,5 +52,6 @@
         <iframe id='window_exchange_tests' src='forms.html'></iframe>
         <iframe id='submit_button_tests' src='submit_button.html'></iframe>
         <iframe id='frameset_tests' src='frameset.html'></iframe>
+        <iframe id='nested_frameset_tests' src='nested_frameset.html'></iframe>
     </body>
 </html>
