--- a/specs/window/nested/a.html
+++ b/specs/window/nested/a.html
@@ -4,12 +4,11 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>some links</title>
+	<title>a</title>
 	<meta name="author" content="Christopher Thatcher">
 	<!-- Date: 2010-07-28 -->
 </head>
 <body id="link_tests">
-    <a id="local_link" href="#foo">local link</a>
-    <a id="link_test_1" href="forms.html">forms</a>
+    frame a
 </body>
 </html>
