added some default logging settings to settings.js. copy them to local_settings.js and add the file to your command arguments (eg bin/envjs node local_settings.js myscript.js). also having fun with html5 by removing html head and body tags from example/pictures/index.html script.

--- a/examples/pictures/index.html
+++ b/examples/pictures/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html>
-<head>
 <meta charset='utf-8'>
 <title>pictures</title>
 <meta name="author" content="Christopher Thatcher">
@@ -16,7 +14,7 @@ jQuery(function($){
             q:'',           //query
             sp:1,           //start page
             c:1000,         //count (how many)
-            fo:'json',      //format (html is defaul)
+            fo:'json',      //format (html is default)
             at:'results',   //attribute
             co: collection  //collection code
         });
@@ -62,8 +60,3 @@ function saveResults(options, results){
     
 }
 </script>
-</head>
-<body>
-
-</body>
-</html>
