--- a/specs/dom/index.html
+++ b/specs/dom/index.html
@@ -1,7 +1,6 @@
-<?xml encoding='utf-8'?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="eng" dir="ltr">
-    <head profile="http://a9.com/-/spec/opensearch/1.1/">
+<!DOCTYPE html>
+<html>
+    <head>
         <title>Envjs DOM Spec</title>
         
         <link rel="stylesheet" 
